# aloni

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
aloni/: __init__.py  application_mode.py  application_run_result.py  application_state.py  dependency_injection_container.py  import_all_from.py  start.py
aloni/asset/: application_asset_registry.py  asset.py
aloni/cli/: __init__.py  check.py  format.py  serve.py
aloni/http/: __init__.py  asset_response_interceptor.py  exception_responder.py  exception_response.py  internal_link_builder.py  jinja_response_interceptor.py  json_response.py  json_response_interceptor.py  not_found_responder.py  not_found_response.py  recursive_responder_aggregate.py  request_context.py  responder.py  responder_caller.py  response_interceptor.py  response_interceptor_aggregate.py  route.py  route_dynamic_matcher.py  route_dynamic_node.py  route_dynamic_node_match.py  route_match.py  route_node.py  route_node_match.py  route_pattern.py  router.py
aloni/http_foundation/: final_response.py  renderable_response.py  request.py  response.py
aloni/jinja_function/: __init__.py  jinja_function.py  url_for.py
aloni/meta/: argument_matching_function_caller.py  class_property_info.py  function_parameter.py  function_parameter_store.py  get_class_properties.py  get_root_class.py  is_responder.py  responder_protocol.py  test_argument_matching_function_caller.py
aloni/role/: __init__.py  intercepts_http_response.py  jinja_function.py  responds_to_cli.py  responds_to_http.py  role.py  role_registry.py  role_regsitry_global.py  service.py  service_override_behavior.py  service_provider.py
aloni/rsgi/: http_scope_responder.py
aloni/service_provider/: application_asset_registry_provider.py  http_response_interceptor_aggreagate_provider.py  http_router_service_provider.py  jinja_environment_service_provider.py  role_registry_service_provider.py  service_provider.py
examples/demo-app/: Makefile  README.md  app.py  app_asgi.py  app_rsgi.py  pyproject.toml
examples/demo-app/demo_app/cli/: hello.py
examples/demo-app/demo_app/http_responder/: health.py  homepage.py  ping.py
examples/demo-app/demo_app/templates/: homepage.j2
examples/demo-app/intention_app/http_responder/: homepage.py  ping.py
intention/: __init__.py  application_mode.py  application_module_provider.py  application_state.py  create_asgi_handler.py  create_rsgi_handler.py  dependency_injection_container.py  import_all_from.py  intention.py  service_collection.py  start.py
intention/asgi/: __init__.py  http_responder_aggregate.py  http_scope_responder.py  lifespan_responder_aggregate.py  lifespan_scope_responder.py  websocket_responder_aggregate.py  websocket_scope_responder.py
intention/cli/: __init__.py  command.py  command_protocol.py  serve.py
intention/cli_foundation/: __init__.py  command_option.py
intention/http/: __init__.py  asset_response.py  exception_response.py  jinja_response.py  jinja_response_interceptor.py  not_found_responder.py  not_found_response.py  recursive_responder_aggregate.py  recursive_response_producer.py  responder.py  responder_caller.py  response_interceptor.py  response_interceptor_aggregate.py  response_interceptor_jinja.py  response_interceptor_jinjs.py  route.py  route_node.py  router.py  text_response.py
intention/http_foundation/: __init__.py  file_response.py  renderable_response.py
(+41 files in other folders)
