[tool.poetry]
name = "intention"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "^3.8.1"
granian = "^1.4.1"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
pipdeptree = "^2.22.0"
pydeps = "^1.12.20"
pytest = "^8.2.2"
ruff = "^0.4.8"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
