[tool.poetry]
name = "intention-app"
version = "0.1.0"
description = ""
authors = ["Mateusz Charytoniuk <mateusz.charytoniuk@protonmail.com>"]
readme = "README.md"
packages = [
    { include = "intention", from = "../intention" },
]

[tool.poetry.dependencies]
python = "^3.11"
intention = {path = "../intention", develop=true}
granian = "^1.4.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
