[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = ""
authors = ["Mateusz Charytoniuk <mateusz.charytoniuk@protonmail.com>"]
readme = "README.md"
packages = [
    { include = "aloni", from = "../../../aloni" },
]

[tool.poetry.dependencies]
aloni = {path = "../../../aloni", develop=true}
python = "^3.11"
granian = "^1.4.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
